--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -31,7 +31,9 @@ library(textclean)
 unigrams_corpus_1970on <- read_tsv(here::here("Data", "unigrams_mikhaylov_project.tsv")) %>%
   select(Session, Year, Country, word, word_stem) %>%
   drop_na() %>%
-  mutate(word_stem = if_else(word == "african", "africa", word_stem))
+  mutate(word_stem = if_else(word == "african", "africa", word_stem)) %>%
+  mutate(word_stem = if_else(word == "environmental", "environ", word_stem))
+  
 
 bigrams_corpus_1970on <- read_tsv(here::here("Data", "bigrams_mikhaylov_project.tsv")) %>%
   select(Session, Year, Country, first_word_stem, second_word_stem, word_stem)
@@ -122,17 +124,6 @@ ggplot(data = indonesia_count_word_year, mapping = aes(x = name, y = percent, fi
          x = NULL,
          title = "Most Common Words Over Time (Indonesia)") +
     theme(title = element_text(size = 14), strip.text.x = element_text(face = "bold"), axis.text.y = element_text(size = 12))
-
-# How to graph one or multiple specific word's occurances over time.
-# overtime <- unigrams_corpus_1970on %>%
-#   filter(Country == "Indonesia") %>%
-#   anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
-#   filter(word_stem == "econom" | word_stem == "global") %>%
-#   group_by(Year, word_stem) %>%
-#   count()
-# 
-# ggplot(data = overtime, mapping = aes(x = Year, y = n, color = word_stem)) +
-#   geom_path()
 ```
 
 Interesting observations:
@@ -355,6 +346,36 @@ ggplot(data = words_divided, mapping = aes(x = name, y = n, label = n)) +
   scale_y_continuous(expand = c(0,0)) +
   facet_wrap(~ Era, scales = "free_y") +
   labs(title = "Most common words over time (Split by Era)", x = "Words (Stemmed)", y = "Number of Mentions")
+```
+
+# Looking at specific words overtime globally
+
+```{r}
+overtime <- unigrams_corpus_1970on %>%
+  anti_join(UN_stop_words, by = c("word_stem" = "words")) %>%
+  filter(word_stem == "environ" | word_stem == "climat" | word_stem == "resili" | word_stem == "sustain" | word_stem == "capabl") %>%
+  # hybriditiy never mentioned
+  group_by(Year, word_stem) %>%
+  count()
+
+others_overtime <- overtime %>%
+  filter(word_stem == "resili"  | word_stem == "capabl")
+
+cc_overtime <- overtime %>%
+  filter(word_stem == "climat" | word_stem == "environ")
+
+ggplot(data = overtime, mapping = aes(x = Year, y = n, color = word_stem)) +
+  geom_path() +
+  labs(title = "Count of focus words over time", y = "Number of Mentions", color = "Word Stem")
+
+ggplot(data = others_overtime, mapping = aes(x = Year, y = n, color = word_stem)) +
+  geom_path() +
+  labs(title = "Mentions of words related to capacity over time", y = "Number of Mentions", color = "Word Stem")
+
+ggplot(data = cc_overtime, mapping = aes(x = Year, y = n, color = word_stem)) +
+  geom_path() +
+  labs(title = "Mentions of words related to climate over time", y = "Number of Mentions", color = "Word Stem")
+
 ```
 
 # Sentiment Analysis
