Updated some stuff about N+7 and G77

--- a/Global_South.Rmd
+++ b/Global_South.Rmd
@@ -384,6 +384,8 @@ ggplot(data = cc_overtime, mapping = aes(x = Year, y = n, color = word_stem)) +
 # Scraping table for Global North/South orientation
 
 ```{r}
+# I ended up looking at north/south vs alignment over G77 because the wikipedia pages for the prior two were organized in a much more convenient format for text scraping. 
+
 northsouth <- read_html("https://meta.wikimedia.org/wiki/List_of_countries_by_regional_classification")
 nonaligned <- read_html("https://www.worlddata.info/alliances/non-aligned-movement.php")
 ```
@@ -459,6 +461,10 @@ ggplot(data = only_alignment, mapping = aes(x = name, y = percent, fill = Year))
          title = "Most Common Words Over Time (Non Aligned States)") +
     theme(title = element_text(size = 14), strip.text.x = element_text(face = "bold"), axis.text.y = element_text(size = 12))
 ```
+
+# Relationships between words using n+7 formula
+
+Currently, I have no clue how to impliment this. Professor Bradley indicated that this likely would be a project for the Fall quarter and he would elaborate further on past techniques he has seen in our meeting on Tuesday the 24th. 
 
 # Sentiment Analysis
 
